Fixed deployment to allow Java preview features, although not really needed