@@ -60,9 +60,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
-<!--          <jvmArguments>-->
-<!--            &#45;&#45;enable-preview-->
-<!--          </jvmArguments>-->
+          <jvmArguments>
+            --enable-preview
+          </jvmArguments>
           <layers>
             <enabled>true</enabled>
           </layers>
@@ -74,18 +74,18 @@
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
-<!--          <compilerArgs>-->
-<!--            &#45;&#45;enable-preview-->
-<!--          </compilerArgs>-->
+          <compilerArgs>
+            --enable-preview
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-<!--          <argLine>-->
-<!--            &#45;&#45;enable-preview-->
-<!--          </argLine>-->
+          <argLine>
+            --enable-preview
+          </argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -101,8 +101,8 @@
             <configuration>
               <installDirectory>src/main/frontend</installDirectory>
               <workingDirectory>src/main/frontend</workingDirectory>
-              <nodeVersion>v12.12.0</nodeVersion>
-              <yarnVersion>v1.19.1</yarnVersion>
+              <nodeVersion>v14.4.0</nodeVersion>
+              <yarnVersion>v1.22.4</yarnVersion>
             </configuration>
           </execution>
           <execution>
